--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/swagger": "^6.1.4",
     "@types/adm-zip": "^0.5.0",
+    "@types/web3": "^1.2.2",
     "adm-zip": "^0.5.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.8.0",
+    "nest-web3": "^1.1.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.0"
